deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: human-driver-webapp
spec:
  selector:
    matchLabels:
      app: human-driver-webapp
  template:
    metadata:
      labels:
        app: human-driver-webapp
    spec:
      containers:
      - name: human-driver-webapp
        image: quay.io/cloud-native-robotz-hackathon/human-driver-webapp:latest
